--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -1,75 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/mystyle.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <title>beste.brettspiele.at</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mystyle.css">
 </head>
 <body>
 
 <!--Registrierungsformular-->
-<container>
-
-    <div class="input_container">
-        <form id="registrationForm" novalidate>
-            <div class="mb-3">
-                <label for="firstname" class="form-label">Vorname:</label>
-                <input type="text" class="form-control" id="firstname" name="firstname" required>
-                <div class="invalid-feedback">Please enter your first name.</div>
-            </div>
-            <div class="mb-3">
-                <label for="lastname" class="form-label">Nachname:</label>
-                <input type="text" class="form-control" id="lastname" name="lastname" required>
-                <div class="invalid-feedback">Please enter your last name.</div>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">E-mail:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-                <div class="invalid-feedback">Please enter a valid email address.</div>
-            </div>
-            <div class="mb-3">
-                <label for="adresse" class="form-label">Adresse</label>
-                <input type="text" class="form-control" id="adresse" name="adresse" required>
-                <div class="invalid-feedback">Please enter a valid address.</div>
-            </div>
-            <div>
-                <input type="radio" name="option" value="option1" id="option1">
-                <label for="option1">Kreditkarte</label>
-
-                <input type="radio" name="option" value="option2" id="option2">
-                <label for="option2">EPS</label>
-
-                <input type="radio" name="option" value="option3" id="option3">
-                <label for="option3">Klarna</label>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-                <div class="invalid-feedback">Please enter a password.</div>
-            </div>
-            <div class="mb-3">
-                <label for="password2" class="form-label">Password wiederholen:</label>
-                <input type="password" class="form-control" id="password2" name="password2" required>
-                <div class="invalid-feedback">Please enter the password again.</div>
-            </div>
-            <button type="button" class="btn btn-primary submit">Submit</button>
-        </form>
+<div class="card">
+    <div class="card-header">
+        Registrierungsformular
     </div>
-
-
-</container>
-
-
+    <div class="card-body">
+        <container>
+            <div class="input_container">
+                <div class="errorLabel">
+                    <label id="errorLabel" class="error"></label>
+                </div>
+                <form id="registrationForm" novalidate>
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Benutzername:</label>
+                        <input type="text" class="form-control" id="username" name="username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="firstname" class="form-label">Vorname:</label>
+                        <input type="text" class="form-control" id="firstname" name="firstname" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastname" class="form-label">Nachname:</label>
+                        <input type="text" class="form-control" id="lastname" name="lastname" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">E-mail:</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="address" class="form-label">Adresse</label>
+                        <input type="text" class="form-control" id="address" name="address" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="zip_code" class="form-label">PLZ:</label>
+                        <input type="integer" class="form-control" id="zip_code" name="zip_code" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="town" class="form-label">Ort:</label>
+                        <input type="text" class="form-control" id="town" name="town" required>
+                    </div>
+                    <div>
+                        <label class="form-label">Standard Zalungsart wählen:</label>
+                        <div>
+                            <select id="payment">
+                                <option value="option1">Kreditkarte</option>
+                                <option value="option2">EPS</option>
+                                <option value="option3">Klarna</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password:</label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password2" class="form-label">Password wiederholen:</label>
+                        <input type="password" class="form-control" id="password2" name="password2" required>
+                    </div>
+                    <div class="btn btn-primary">
+                        <button type="button" class="regbutton" onclick="validateInput()">Jetzt Registrieren!</button>
+                    </div>
+                </form>
+            </div>
+        </container>
+    </div>
+</div>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 <script type="text/javascript" src="js/registration.js"></script>
-<script>
-    $(document).ready(sendRegistration());
-</script>
-</body>
 
+</body>
 </html>
